--- a/boardTest/board2.css
+++ b/boardTest/board2.css
@@ -1,8 +1,8 @@
-body{
+body {
     margin: 0 !important;
 }
 
-.board-header{
+.board-header {
     display: flex;
     position: relative;
     top: 176px;
@@ -12,7 +12,7 @@ body{
     max-width: 1056px;
 }
 
-.board-overview{
+.board-overview {
     display: flex;
     margin-left: 296px;
     position: relative;
@@ -25,19 +25,19 @@ body{
     overflow-y: hidden;
 }
 
-.h1-board{
+.h1-board {
     display: flex;
     position: relative;
     font-size: 61px;
 }
 
-.search-section{
+.search-section {
     display: flex;
     align-items: center;
     gap: 32px;
 }
 
-.search-field{
+.search-field {
     width: 100%;
     position: relative;
     display: flex;
@@ -45,7 +45,7 @@ body{
     cursor: pointer;
 }
 
-.search-field-responsive{
+.search-field-responsive {
     width: 396px;
     position: relative;
     display: flex;
@@ -57,7 +57,7 @@ body{
     margin-left: 64px;
 }
 
-.search-input{
+.search-input {
     width: 100%;
     padding: 8px 16px;
     border: 1px solid #d1d1d1;
@@ -68,14 +68,14 @@ body{
     box-sizing: border-box;
 }
 
-.separator-line{
+.separator-line {
     height: 31px;
     width: 1px;
-    background-color: #D1D1D1;
+    background-color: #d1d1d1;
     pointer-events: none;
 }
 
-.search-icons{
+.search-icons {
     position: absolute;
     right: 21px;
     display: flex;
@@ -83,7 +83,7 @@ body{
     gap: 16px;
 }
 
-.search{
+.search {
     border: none;
     display: flex;
     align-items: center;
@@ -93,22 +93,22 @@ body{
     width: 36px;
 }
 
-.search:hover{
-    background-color: #D9D9D9;
+.search:hover {
+    background-color: #d9d9d9;
     border-radius: 50%;
 }
 
-.board-column{
+.board-column {
     width: 252px;
 }
 
-h3{
+h3 {
     font-size: 20px;
     font-weight: 700;
-    color: #42526E;
+    color: #42526e;
 }
 
-.column-header{
+.column-header {
     display: flex;
     justify-content: space-between;
 }
@@ -119,28 +119,28 @@ h3{
     cursor: pointer;
 }
 
-.column-feedback{
+.column-feedback {
     width: 252px;
     height: 48px;
     border-radius: 10px;
-    border: 1px dashed #A8A8A8;
-    background-color: #E7E7E7;
+    border: 1px dashed #a8a8a8;
+    background-color: #e7e7e7;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.no-tasks{
-    color: #A8A8A8;
+.no-tasks {
+    color: #a8a8a8;
 }
 
-.tasks-container{
+.tasks-container {
     max-height: 95%;
     overflow-y: auto;
     padding-top: 16px;
 }
 
-button{
+button {
     border-radius: 8px;
     padding: 8px 16px;
     cursor: pointer;
@@ -149,9 +149,9 @@ button{
     box-sizing: border-box;
 }
 
-.create-task-from-board{
+.create-task-from-board {
     color: white;
-    background-color: #2A3647;
+    background-color: #2a3647;
     border: none;
     width: 220px;
     height: 48px;
@@ -162,12 +162,12 @@ button{
     font-size: 20px;
 }
 
-.create-task-from-board:hover{
-    background-color: #29ABE2;
+.create-task-from-board:hover {
+    background-color: #29abe2;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
-.task{
+.task {
     width: 252px;
     min-height: 196px;
     box-sizing: border-box;
@@ -186,23 +186,23 @@ button{
 }
 
 .category-user-story {
-    background-color: #0038FF;
+    background-color: #0038ff;
 }
 
 .category-technical-task {
-    background-color: #1FD7C1;
+    background-color: #1fd7c1;
 }
 
-.task-category{
+.task-category {
     display: inline-block;
     width: fit-content;
     padding: 4px 16px;
     border-radius: 8px;
     margin-bottom: 24px;
- }
+}
 
-.task h4{
-    color: #2A3647;
+.task h4 {
+    color: #2a3647;
     margin-bottom: 8px;
 }
 
@@ -218,12 +218,12 @@ button{
     margin-bottom: 20px;
 }
 
-.contact-icons-container{
+.contact-icons-container {
     display: flex;
     margin-top: 12px;
 }
 
-.contact-icon-small{
+.contact-icon-small {
     width: 34px;
     height: 34px;
     border-radius: 70%;
@@ -251,13 +251,13 @@ button{
     border: 2px solid white;
 }
 
-.task-subtasks-container{
+.task-subtasks-container {
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
-.task-subtasks{
+.task-subtasks {
     font-size: 12px;
 }
 
@@ -299,7 +299,7 @@ button{
 .floating-task-container {
     width: 1116px;
     height: 870px;
-    background-color: #FFFFFF;
+    background-color: #ffffff;
     border-radius: 30px;
     position: relative;
     animation: slideIn 0.5s ease-out forwards;
@@ -332,7 +332,7 @@ button{
     }
 }
 
-.floating-task-container h1{
+.floating-task-container h1 {
     font-size: 61px;
     line-height: 73.2px;
     width: 278px;
@@ -342,39 +342,39 @@ button{
     left: 74px;
 }
 
-.floating-task-container #content-box-container{
+.floating-task-container #content-box-container {
     position: relative;
     top: 100px;
     left: 74px;
 }
 
-.floating-task-container #interactives-buttons-container{
+.floating-task-container #interactives-buttons-container {
     position: relative;
     top: 240px;
     left: 744px;
     margin-bottom: 0;
 }
 
-.floating-task-container #required-container{
+.floating-task-container #required-container {
     position: relative;
     left: 74px;
     top: 268px;
     margin-bottom: 0;
 }
 
-#choose-prio-container .choose-prio-button{
+#choose-prio-container .choose-prio-button {
     box-shadow: 0px 0px 4px 0px #0000001a;
 }
 
-#choose-prio-container .choose-prio-button:hover{
+#choose-prio-container .choose-prio-button:hover {
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
-#new-subtask-list-container{
+#new-subtask-list-container {
     background-color: white !important;
 }
 
-.close-add-task-form{
+.close-add-task-form {
     width: 32px;
     height: 32px;
     display: flex;
@@ -384,12 +384,12 @@ button{
     left: 1044px;
 }
 
-.close-add-task-form:hover{
-    background-color: #D9D9D9;
+.close-add-task-form:hover {
+    background-color: #d9d9d9;
     border-radius: 50%;
 }
 
-.close-add-task-form svg path{
+.close-add-task-form svg path {
     fill: black;
 }
 
@@ -468,7 +468,7 @@ button{
 .ok-button {
     margin-top: 10px;
     padding: 8px 16px;
-    background-color: #2A3647;
+    background-color: #2a3647;
     color: white;
     border: none;
     border-radius: 5px;
@@ -476,11 +476,11 @@ button{
 }
 
 .ok-button:hover {
-    background-color: #29ABE2;
+    background-color: #29abe2;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
-.task-detail-btn-group{
+.task-detail-btn-group {
     display: flex;
     align-items: center;
     gap: 16px;
@@ -489,23 +489,23 @@ button{
     margin-top: auto;
 }
 
-.btn-edit{
+.btn-edit {
     display: flex;
     gap: 8px;
     border: none;
     background-color: transparent;
-    color: #2A3647;
+    color: #2a3647;
     font-weight: 400;
     cursor: pointer;
     padding: 0;
 }
 
-.btn-edit:hover{
+.btn-edit:hover {
     color: #29abe2;
     font-weight: 600;
 }
 
-.btn-edit:hover svg path{
+.btn-edit:hover svg path {
     fill: #29abe2;
 }
 
@@ -526,7 +526,7 @@ button{
 .categorieAndCloseButton {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    /* align-items: center; */
     margin-bottom: 24px;
 }
 
@@ -554,7 +554,7 @@ button{
     position: relative;
 }
 
-.titleTaskOverlayH2{
+.titleTaskOverlayH2 {
     font-size: 36px;
     line-height: 43.2px;
     font-weight: 700;
@@ -607,25 +607,25 @@ button{
     margin-bottom: 5px;
 }
 
-.contact-detail{
+.contact-detail {
     display: flex;
     align-items: center;
     gap: 16px;
     padding: 7px 16px;
 }
 
-label{
+label {
     display: flex;
     align-items: center;
-    gap: 8px;   
-    font-size: 16px; 
+    gap: 8px;
+    font-size: 16px;
 }
 
-.input-checkbox{
+.input-checkbox {
     display: none;
 }
 
-.custom-checkbox{
+.custom-checkbox {
     background: url(/img/unchecked.png) no-repeat center center;
     background-size: contain;
     cursor: pointer;
@@ -643,7 +643,7 @@ label{
     margin-top: 24px;
 }
 
-.subtaskSection span{
+.subtaskSection span {
     font-size: 20px;
 }
 
@@ -663,20 +663,20 @@ label{
 
 .addedSubtasksDiv::-webkit-scrollbar-track,
 .sectionAssignedUsers::-webkit-scrollbar-track {
-    background: #f6f7f8; 
+    background: #f6f7f8;
     border-radius: 5px;
 }
 
 .addedSubtasksDiv::-webkit-scrollbar-thumb,
 .sectionAssignedUsers::-webkit-scrollbar-thumb {
-    background: #d1d1d1; 
+    background: #d1d1d1;
     border-radius: 10px;
     position: relative;
 }
 
 .addedSubtasksDiv::-webkit-scrollbar-thumb:hover,
 .sectionAssignedUsers::-webkit-scrollbar-thumb:hover {
-    background: #c9c8c8; 
+    background: #c9c8c8;
 }
 
 .deleteEditSeperator {
@@ -709,13 +709,14 @@ label{
     justify-content: space-between;
 }
 
-.style-effects-success-message-container{
+.style-effects-success-message-container {
     opacity: 1 !important;
     display: flex !important;
     z-index: 1000 !important;
 }
 
-.yesButton, .noButton {
+.yesButton,
+.noButton {
     padding: 10px 20px;
     margin: 5px;
     cursor: pointer;
@@ -726,7 +727,8 @@ label{
     color: white;
 }
 
-.yesButton:hover, .noButton:hover {
+.yesButton:hover,
+.noButton:hover {
     background-color: #29abe2;
 }
 
@@ -738,7 +740,7 @@ label{
 #missing-title-message,
 #missing-date-message,
 #missing-category-message {
-    display: none; 
+    display: none;
 }
 
 /* #missing-subtask-message{
@@ -746,73 +748,70 @@ label{
 } */
 
 #prio-urgent {
-    font-weight:400; 
+    font-weight: 400;
 }
 
 #prio-low-button {
-    font-weight:400; 
+    font-weight: 400;
 }
 
-
-
-
-@media (max-width: 1360px){
-    .board-header{
+@media (max-width: 1360px) {
+    .board-header {
         margin-left: 64px;
         top: 128px;
     }
-    .board-overview{
+    .board-overview {
         flex-direction: column;
         margin-left: 64px;
         max-height: calc(100vh - 390px);
         overflow-y: auto;
     }
-    .board-column{
+    .board-column {
         display: flex;
         flex-direction: column;
         width: 100%;
     }
-    .tasks-container{
+    .tasks-container {
         display: flex;
         overflow-x: auto;
         /* min-height: 200px; */
     }
-    .column-header{
+    .column-header {
         max-width: 252px;
     }
-    .task{
+    .task {
         min-width: 252px;
         max-width: 252px;
         margin-right: 16px;
     }
-    .tasks-container::-webkit-scrollbar{
-    height: 6px !important;
-    width: 6px !important;
-    display: flex;
+    .tasks-container::-webkit-scrollbar {
+        height: 6px !important;
+        width: 6px !important;
+        display: flex;
     }
     .tasks-container::-webkit-scrollbar-track {
-    background: #f6f7f8 !important; 
-    border-radius: 5px !important;
+        background: #f6f7f8 !important;
+        border-radius: 5px !important;
     }
     .tasks-container::-webkit-scrollbar-thumb {
-    background: #d1d1d1 !important; 
-    border-radius: 10px !important;
-    position: relative;
+        background: #d1d1d1 !important;
+        border-radius: 10px !important;
+        position: relative;
     }
     .tasks-container::-webkit-scrollbar-thumb:hover {
-    background: #c9c8c8 !important; 
+        background: #c9c8c8 !important;
     }
-    #task-form-overlay{
+    #task-form-overlay {
         background-color: rgba(0, 0, 0, 0);
     }
-    .floating-task-container{
+    .floating-task-container {
         background-color: #f6f7f8;
         width: 100%;
         max-height: calc(100vh - 170px);
         border-radius: 0px;
-        margin-bottom: -12px
+        margin-bottom: -12px;
     }
-    .floating-task-container h1{
+    .floating-task-container h1 {
         font-size: 47px;
         line-height: 56.4px;
         font-weight: 700;
@@ -820,103 +819,103 @@ label{
         left: 16px;
         top: 48px;
     }
-    #h1-container{
+    #h1-container {
         top: 0px !important;
         display: flex;
         align-items: center;
         width: auto !important;
         justify-content: space-between;
     }
-    .floating-task-container #content-box-container{
+    .floating-task-container #content-box-container {
         top: 110px;
         left: 0;
         height: 60vh;
         overflow-y: auto;
     }
-    .floating-task-container #interactives-buttons-container{
+    .floating-task-container #interactives-buttons-container {
         top: 0;
         left: 0;
         margin-bottom: auto;
     }
-    .floating-task-container #required-container{
+    .floating-task-container #required-container {
         top: 0;
         left: 0;
     }
-    #interactives-buttons-and-required-container{
+    #interactives-buttons-and-required-container {
         margin-bottom: 0px !important;
         padding: 10px 40px 16px 16px !important;
     }
-    .close-add-task-form{
+    .close-add-task-form {
         left: 16px;
     }
-    #new-subtask-list-container{
+    #new-subtask-list-container {
         background-color: #f6f7f8 !important;
     }
 }
 
-@media (max-width: 1130px){
-    .board-header{
+@media (max-width: 1130px) {
+    .board-header {
         width: 396px;
     }
-    .h1-board{
+    .h1-board {
         font-size: 47px;
     }
-    .create-task-from-board{
-       width: 52px;
+    .create-task-from-board {
+        width: 52px;
     }
-    .create-task-from-board span{
+    .create-task-from-board span {
         display: none;
     }
-    .search-field{
+    .search-field {
         display: none;
     }
-    .search-field-responsive{
+    .search-field-responsive {
         display: flex;
     }
-    .board-overview{
+    .board-overview {
         top: 200px;
     }
 }
 
-@media (max-width: 425px){
+@media (max-width: 425px) {
     .board-header,
     .search-field-responsive,
-    .board-overview{
+    .board-overview {
         margin-left: 16px;
     }
     .board-header,
-    .search-field-responsive{
+    .search-field-responsive {
         width: 290px;
     }
-    .task-detail-btn-group{
+    .task-detail-btn-group {
         justify-content: center;
     }
-    .titleTaskOverlayH2{
+    .titleTaskOverlayH2 {
         font-size: 30px;
     }
-    .taskDetailsDiv{
+    .taskDetailsDiv {
         padding: 44px 36px 44px 36px;
     }
     .categorieAndCloseButton,
-    .titleTaskOverlayH2{
+    .titleTaskOverlayH2 {
         margin-bottom: 20px;
     }
     .dueDateDiv,
     .dueDateDiv,
     .dueDateDiv,
-    .subtaskSection{
+    .subtaskSection {
         margin-top: 20px;
     }
-    .sectionAssignedUsers{
+    .sectionAssignedUsers {
         gap: 8px;
     }
-    .addedSubtasksDiv{
+    .addedSubtasksDiv {
         max-height: 62px;
     }
 }
 
-@media (max-width: 400px){
-    .titleTaskOverlayH2{
+@media (max-width: 400px) {
+    .titleTaskOverlayH2 {
         display: -webkit-box;
         -webkit-line-clamp: 1;
         line-clamp: 1;
