--- a/boardTest/boardEditTask.css
+++ b/boardTest/boardEditTask.css
@@ -3,20 +3,26 @@
     max-height: 80vh;
     height: 100%;
     border-radius: 30px;
-    padding: 48px 40px 48px 40px;
+    padding-left: 40px;
+    padding-right: 40px;
     background-color: white;
     box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.16);
     display: flex !important;
     flex-direction: column !important;
     overflow-y: scroll;
     gap: 24px;
+    position: fixed;
 }
 
 .closeButton {
+    position: sticky;
+    top: 0;
     display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    margin-bottom: 24px;
+    justify-content: end;
+    z-index: 10;
+    background-color: white;
+    cursor: pointer;
+    padding-top: 48px;
 }
 
 @media (max-width: 1360px) {
