added separate editTask overlay

--- a/boardTest/board2.css
+++ b/boardTest/board2.css
@@ -755,6 +755,19 @@ label {
     font-weight: 400;
 }
 
+#editTaskOverlay{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    /* background-color: rgba(0, 0, 0, 0.2); */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
 @media (max-width: 1360px) {
     .board-header {
         margin-left: 64px;
