--- a/css/addTask.css
+++ b/css/addTask.css
@@ -484,6 +484,10 @@ h1 {
     justify-content: center;
 }
 
+.contactsDropdownNameSpan {
+    margin-left: 8px;
+}
+
 #contacts-dropwdown-arrow-container:hover {
     background: lightgray;
     border-radius: 100%;
@@ -496,6 +500,11 @@ h1 {
 .dropdown-list-hover {
     background: lightgray;
     border-radius: 100%;
+}
+
+#selected-contacts-circle-container {
+    display: flex;
+    gap: 8px;
 }
 
 .uncheckedBox {
@@ -512,8 +521,8 @@ h1 {
     border-radius: 50%;
     color: white;
     font-size: 12px;
-    margin-right: 8px;
     border: 2px solid white;
+    margin-right: -8px;
 }
 
 .circle:hover {
