--- a/css/addTask.css
+++ b/css/addTask.css
@@ -652,9 +652,9 @@ h1 {
     height: 48px;
 }
 
-#missing-subtask-message {
+/* #missing-subtask-message {
     position: absolute;
-}
+} */
 
 /* scrolbar */
 
