--- a/css/addTask.css
+++ b/css/addTask.css
@@ -305,7 +305,7 @@ h1 {
 }
 
 #generated-subtask-list-container {
-    max-height: 96px;
+    max-height: 144px;
     overflow-y: auto;
     position: relative;
     width: 100%;
@@ -316,6 +316,7 @@ h1 {
     justify-content: space-between;
     align-items: center;
     padding: 12px 16px;
+    transition: background-color 0.3s, border-radius 0.3s;
 }
 
 .generatedSubtasks:hover {
@@ -650,11 +651,12 @@ h1 {
 #subtask-relative-container {
     position: relative;
     height: 48px;
+    margin-bottom: 8px;
 }
 
-/* #missing-subtask-message {
+#missing-subtask-message {
     position: absolute;
-} */
+}
 
 /* scrolbar */
 
@@ -716,6 +718,7 @@ input[type="date"]:invalid::-webkit-datetime-edit {
     #content-box-right {
         gap: 16px;
         width: auto;
+        height: auto;
     }
 
     .subtitle {
@@ -784,7 +787,7 @@ input[type="date"]:invalid::-webkit-datetime-edit {
     }
 
     #substasks-container {
-        height: 83px;
+        height: auto;
     }
 
     #choose-prio-container {
@@ -832,7 +835,7 @@ input[type="date"]:invalid::-webkit-datetime-edit {
     }
 
     #generated-subtask-list-container {
-        max-height: 80px;
+        max-height: none;
     }
 
     #interactives-buttons-and-required-container {
