--- a/css/addTask.css
+++ b/css/addTask.css
@@ -63,7 +63,8 @@ h1 {
     height: 64px;
 }
 
-#title-input {
+#title-input,
+#edit-title-input {
     width: 440px;
     height: 48px;
     padding: 12px 21px 12px 21px;
@@ -85,7 +86,8 @@ h1 {
     height: 136px;
 }
 
-#textarea-input {
+#textarea-input,
+#edit-textarea-input {
     height: 120px;
     padding: 18px 16px 18px 16px;
     border-radius: 10px;
