--- a/css/addTask.css
+++ b/css/addTask.css
@@ -136,7 +136,8 @@ h1 {
     height: 64px;
 }
 
-#date-input {
+#date-input,
+#edit-date-input {
     width: 440px;
     height: 48px;
     padding: 12px 16px 12px 16px;
