--- a/css/addTask.css
+++ b/css/addTask.css
@@ -559,6 +559,7 @@ h1 {
     top: 100%;
     border-radius: 10px;
     background-color: white;
+    margin-top: 8px;
 }
 
 #category-dropdown-list div:hover {
