--- a/boardTest/boardEditTask.css
+++ b/boardTest/boardEditTask.css
@@ -81,6 +81,22 @@
     height: auto;
 }
 
+#edit-selected-name {
+    height: 48px;
+    padding: 12px 16px 12px 16px;
+    border-radius: 10px;
+    border: 1px solid #d1d1d1;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 24px;
+    text-align: left;
+    cursor: pointer;
+    background-color: white;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
 @media (max-width: 1360px) {
     #content-box-container-edit-task {
         gap: 16px;
