--- a/boardTest/boardEditTask.css
+++ b/boardTest/boardEditTask.css
@@ -97,6 +97,21 @@
     align-items: center;
 }
 
+#board-new-subtask-input {
+    border: none;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 24px;
+    text-align: left;
+    width: 100%;
+}
+
+#board-missing-title-message,
+#board-missing-category-message {
+    color: #ff8190;
+    font-size: 12px;
+}
+
 @media (max-width: 1360px) {
     #content-box-container-edit-task {
         gap: 16px;
@@ -105,5 +120,9 @@
     #edit-content-box-right {
         gap: 16px;
         width: auto;
+    }
+
+    #board-new-subtask-input {
+        font-size: 16px;
     }
 }
