--- a/css/addTask.css
+++ b/css/addTask.css
@@ -448,6 +448,12 @@ h1 {
     color: #ff8190;
 }
 
+#missing-title-message,
+#missing-date-message {
+    font-size: 12px;
+    color: #ff8190;
+}
+
 /* dropdown contacts*/
 
 #dropdown-list {
