--- a/css/addTask.css
+++ b/css/addTask.css
@@ -64,7 +64,8 @@ h1 {
 }
 
 #title-input,
-#edit-title-input {
+#edit-title-input,
+#board-title-input {
     width: 440px;
     height: 48px;
     padding: 12px 21px 12px 21px;
@@ -87,7 +88,8 @@ h1 {
 }
 
 #textarea-input,
-#edit-textarea-input {
+#edit-textarea-input,
+#board-textarea-input {
     height: 120px;
     padding: 18px 16px 18px 16px;
     border-radius: 10px;
@@ -137,7 +139,8 @@ h1 {
 }
 
 #date-input,
-#edit-date-input {
+#edit-date-input,
+#board-date-input {
     width: 440px;
     height: 48px;
     padding: 12px 16px 12px 16px;
@@ -756,7 +759,9 @@ input[type="date"]:invalid::-webkit-datetime-edit {
     #title-input,
     #date-input,
     #edit-date-input,
-    #edit-title-input {
+    #edit-title-input,
+    #board-title-input,
+    #board-date-input {
         width: 100%;
         font-size: 16px;
         height: 40px;
@@ -824,15 +829,19 @@ input[type="date"]:invalid::-webkit-datetime-edit {
     #category-placeholder,
     #textarea-input,
     #edit-textarea-input,
+    #board-textarea-input,
     #new-subtask-input,
     #prio-urgent,
     #prio-medium,
-    #prio-low {
+    #prio-low #edit-prio-urgent,
+    #edit-prio-low,
+    #edit-prio-medium {
         font-size: 16px;
     }
 
     #textarea-input,
-    #edit-textarea-input {
+    #edit-textarea-input,
+    #board-textarea-input {
         height: 88px;
     }
 
