--- a/css/addTask.css
+++ b/css/addTask.css
@@ -833,7 +833,8 @@ input[type="date"]:invalid::-webkit-datetime-edit {
     #new-subtask-input,
     #prio-urgent,
     #prio-medium,
-    #prio-low #edit-prio-urgent,
+    #prio-low,
+    #edit-prio-urgent,
     #edit-prio-low,
     #edit-prio-medium {
         font-size: 16px;
