added board add task category validation

--- a/boardTest/boardEditTask.css
+++ b/boardTest/boardEditTask.css
@@ -98,10 +98,11 @@
 }
 
 #board-missing-title-message,
-#board-missing-category-message,
+#board-addTask-missing-category-message,
 #board-missing-date-message {
     color: #ff8190;
     font-size: 12px;
+    display: none;
 }
 
 @media (max-width: 1360px) {
