added board add task category validation

--- a/boardTest/boardEditTask.css
+++ b/boardTest/boardEditTask.css
@@ -105,6 +105,10 @@
     display: none;
 }
 
+#board-addTask-category-placeholder {
+    font-size: 16px;
+}
+
 @media (max-width: 1360px) {
     #content-box-container-edit-task {
         gap: 16px;
